...
        );
      case Error():
        _state = _state.copyWith(
          originalRecipes: [],
          filteredRecipes: [],
          searchLabel: 'Recent Search',
          resultLabel: '0 results',
          isLoading: false,
          errorMessage: 'error',
        );
    }
    notifyListeners();
  }
...
